--- a/FirebaseDS/options/extensions/YYFirebaseFirestore.json
+++ b/FirebaseDS/options/extensions/YYFirebaseFirestore.json
@@ -3,7 +3,7 @@
   "configurables": {
     "58df55cc-27e3-4b18-9fac-8c00f6af6d38": {
       "Default": {
-        "value": "exampleexperiment-e2a4d"
+        "value": ""
       }
     },
     "d0bc7dea-7df6-4506-8c8a-78f04b930a4e": {
